--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcc 'DA'
 - !lcsh 'Great Britain -- History -- Lancaster and York, 1399-1485 -- Biography'
 - !lcsh 'Humphrey, Duke of Gloucester, 1391-1447'
+- GITenberg
 title: 'Humphrey, Duke of Gloucester: A Biography'
 url: http://www.gutenberg.org/ebooks/41477
